--- a/curriculo.html
+++ b/curriculo.html
@@ -13,7 +13,7 @@
                 <div id="conteudo-left">
                     <div id="cabecalho">
                         <div id="foto">
-                            <img id="foto-perfil" src="img1.jpg" alt="Camila-Perfil">
+                            <img id="foto-perfil" src="img1.jpg" alt="JVAS_Perfil">
                         </div>
                 
                         <div id="nome-area">
