--- a/curriculo.html
+++ b/curriculo.html
@@ -140,7 +140,7 @@
             </div>
         </article>
         <footer>
-            <p id="p-footer"> &copy; João Victor Araujo</p>
+            <p id="p-footer"> &copy;<i>Desenvolvido por:</i> João Victor Araujo</p>
         </footer>
     </section>
 </body>
