--- a/curriculo.html
+++ b/curriculo.html
@@ -16,7 +16,7 @@
                         </div>
                 
                         <div id="nome-area">
-                            <h2 id="nome"> João Victor A. </h2>
+                            <h2 id="nome"> João Victor Araujo </h2>
                             <p id="area"> Front-end Developer </p>
                         </div>
                     </div>
