--- a/curriculo.html
+++ b/curriculo.html
@@ -76,7 +76,7 @@
                     </div>
             
                     <div id="projetos">
-                        <h2 id="h2-projetos">Projetos <a href="https://github.com/Joao-Victor-Araujo">GitHub</a></h2>
+                        <h2 id="h2-projetos">Projetos</a></h2>
                         <div class="educacao">
                             <ul>
                                 <li>Css box model position - <a href="https://github.com/Joao-Victor-Araujo/css-box-model-position-01" target="_blank">Repositorio</a></li>
@@ -92,10 +92,10 @@
                 <div id="contato">
                     <h2 id="contato-h2"> Contato</h2>
                     <p id="p-contato">
-                        Rua Augusto Lima 4930, Aldeia dos camarás - Camaragibe-PE - 54792-340
                         (81) 9 9704-2963<br><a id="wpp" href="https://api.whatsapp.com/send?phone=5581997042963&text=Fale%20comigo%20aqui" target="_blank">Link Whatsapp</a><br/>
                         <a>Jvas1999@gmail.com</a>
                     </p>
+                    <br>
                     <div id="img-contato">
                         <a class="icones" href="https://www.linkedin.com/in/jo%C3%A3o-victor-araujo-silva-b896a9173/" target="_blank" rel=”noopener” rel=”noopener noreferrer”>
                             <img src="https://img.icons8.com/ios-glyphs/30/ffffff/linkedin-2--v1.png" alt="LinkedIn-Icon"/>
