--- a/curriculo.html
+++ b/curriculo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/curriculo.css">
-    <title>Curriculo JVAS</title>
+    <title>João Victor A.</title>
 </head>
 <body>
     <section id="principal">
@@ -79,9 +79,10 @@
                         <h2 id="h2-projetos">Projetos</a></h2>
                         <div class="educacao">
                             <ul>
-                                <li>Css box model position - <a href="https://github.com/Joao-Victor-Araujo/css-box-model-position-01" target="_blank">Repositorio</a></li>
-                                <li>Css Responsividade - <a href="https://github.com/Joao-Victor-Araujo/css-responsividade-01" target="_blank">Repositorio</a></li>
-                                <li>Css Principais Propriedades - <a href="https://github.com/Joao-Victor-Araujo/css-principais-propriedades" target="_blank">Repositorio</a></li>
+                                <li>Css Box model position - <a href="https://github.com/Joao-Victor-Araujo/css-box-model-position-01" target="_blank">Clique Aqui</a></li>
+                                <li>Css Responsividade - <a href="https://github.com/Joao-Victor-Araujo/css-responsividade-01" target="_blank">Clique Aqui</a></li>
+                                <li>Css Principais Propriedades - <a href="https://github.com/Joao-Victor-Araujo/css-principais-propriedades" target="_blank">Clique Aqui</a></li>
+                                <li>HTML Estrurações - <a href="https://github.com/Joao-Victor-Araujo/aula-html-estruturais-02.git" target="_blank">Clique Aqui</a></li>
                             </ul>
                     </div>
                 </div>
@@ -92,20 +93,20 @@
                 <div id="contato">
                     <h2 id="contato-h2"> Contato</h2>
                     <p id="p-contato">
-                        (81) 9 9704-2963<br><a id="wpp" href="https://api.whatsapp.com/send?phone=5581997042963&text=Fale%20comigo%20aqui" target="_blank">Link Whatsapp</a><br/>
-                        <a>Jvas1999@gmail.com</a>
+                        (81) 9 9704-2963<br/>
+                        <a id="email">Jvas1999@gmail.com</a>
                     </p>
                     <br>
                     <div id="img-contato">
-                        <a class="icones" href="https://www.linkedin.com/in/jo%C3%A3o-victor-araujo-silva-b896a9173/" target="_blank" rel=”noopener” rel=”noopener noreferrer”>
+                        <a class="icones" href="https://www.linkedin.com/in/jvas1999/" target="_blank" rel=”noopener” rel=”noopener noreferrer”>
                             <img src="https://img.icons8.com/ios-glyphs/30/ffffff/linkedin-2--v1.png" alt="LinkedIn-Icon"/>
                         </a>
                         <a class="icones" href="https://github.com/Joao-Victor-Araujo" target="_blank">
                             <img src="https://img.icons8.com/ios-glyphs/30/ffffff/github.png" alt="GitHub-Icon"/>
                         </a>
+                        <a class="icones" href="https://api.whatsapp.com/send?phone=5581997042963&text=Fale%20comigo%20aqui" target="_blank" rel=”noopener” rel=”noopener noreferrer”>
+                            <img src="https://img.icons8.com/pastel-glyph/64/ffffff/whatsapp--v2.png" width="29px"/></a>
                     </div>
-                </div>
-        
                 <div id="conhecimentos">
                     <h2 id="conhecimento-h2"> Conhecimentos</h2>
                     <p>
@@ -126,13 +127,10 @@
                                 <td>API Rest</td>
                             </tr>
                             <tr> 
-                                <td>Python</td>
+                                <td>Docker</td>
                             </tr>
                             <tr> 
-                                <td>Java</td>
-                            </tr>
-                            <tr> 
-                                <td>MySQL</td>
+                                <td>Linux</td>
                             </tr>
                         </table>
                     </p>
